--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "Backend for our cyper security forum - \"Backdoor\"",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "ts-node-dev --respawn src/index.ts",
+    "dev": "nodemon --exec ts-node src/index.ts",
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/qubit-epics/backdoor-backend.git"
+    "url": "git+https://github.com/backdoor-epics/backdoor-backend.git"
   },
   "keywords": [
     "backdoor",
@@ -19,7 +21,22 @@
   "author": "Backdoor",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/qubit-epics/backdoor-backend/issues"
+    "url": "https://github.com/backdoor-epics/backdoor-backend.git/issues"
   },
-  "homepage": "https://github.com/qubit-epics/backdoor-backend#readme"
+  "homepage": "https://github.com/qubit-epics/backdoor-backend#readme",
+  "devDependencies": {
+    "@types/body-parser": "^1.19.0",
+    "@types/express": "^4.17.11",
+    "@types/mongoose": "^5.10.5",
+    "@types/node": "^15.3.0",
+    "dotenv": "^9.0.2",
+    "ts-node": "^9.1.1",
+    "ts-node-dev": "^1.1.6",
+    "typescript": "^4.2.4"
+  },
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.12.9"
+  }
 }
