--- a/package.json
+++ b/package.json
@@ -35,8 +35,15 @@
     "typescript": "^4.2.4"
   },
   "dependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/passport": "^1.0.6",
+    "@types/passport-local": "^1.0.33",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "client-sessions": "^0.8.0",
     "express": "^4.17.1",
-    "mongoose": "^5.12.9"
+    "mongoose": "^5.12.9",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0"
   }
 }
