--- a/package.json
+++ b/package.json
@@ -25,9 +25,13 @@
   },
   "homepage": "https://github.com/qubit-epics/backdoor-backend#readme",
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/body-parser": "^1.19.0",
+    "@types/client-sessions": "^0.8.0",
     "@types/express": "^4.17.11",
     "@types/mongoose": "^5.10.5",
+    "@types/passport": "^1.0.6",
+    "@types/passport-local": "^1.0.33",
     "@types/node": "^15.3.0",
     "dotenv": "^9.0.2",
     "ts-node": "^9.1.1",
@@ -35,9 +39,6 @@
     "typescript": "^4.2.4"
   },
   "dependencies": {
-    "@types/bcryptjs": "^2.4.2",
-    "@types/passport": "^1.0.6",
-    "@types/passport-local": "^1.0.33",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "client-sessions": "^0.8.0",
