--- a/package.json
+++ b/package.json
@@ -28,11 +28,12 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/body-parser": "^1.19.0",
     "@types/client-sessions": "^0.8.0",
+    "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
     "@types/mongoose": "^5.10.5",
+    "@types/node": "^15.3.0",
     "@types/passport": "^1.0.6",
     "@types/passport-local": "^1.0.33",
-    "@types/node": "^15.3.0",
     "dotenv": "^9.0.2",
     "ts-node": "^9.1.1",
     "ts-node-dev": "^1.1.6",
@@ -42,6 +43,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "client-sessions": "^0.8.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^5.12.9",
     "passport": "^0.4.1",
