--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Backend for our cyper security forum - \"Backdoor\"",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --exec ts-node src/index.ts",
+    "start": "ts-node src/index.ts",
+    "dev": "nodemon --exec ts-node src/index.ts",
     "build": "tsc"
   },
   "repository": {
