--- a/package.json
+++ b/package.json
@@ -32,13 +32,13 @@
     "@types/mongoose": "^5.10.5",
     "@types/node": "^15.3.0",
     "@types/passport": "^1.0.6",
-    "@types/passport-local": "^1.0.33",
+    "@types/passport-local": "^1.0.33"
+  },
+  "dependencies": {
     "dotenv": "^9.0.2",
     "ts-node": "^9.1.1",
     "ts-node-dev": "^1.1.6",
-    "typescript": "^4.2.4"
-  },
-  "dependencies": {
+    "typescript": "^4.2.4",
     "bcryptjs": "^2.4.3",
     "client-sessions": "^0.8.0",
     "cors": "^2.8.5",
