--- a/package.json
+++ b/package.json
@@ -35,18 +35,19 @@
     "@types/passport-local": "^1.0.33"
   },
   "dependencies": {
-    "dotenv": "^9.0.2",
-    "ts-node": "^9.1.1",
-    "ts-node-dev": "^1.1.6",
-    "typescript": "^4.2.4",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
     "client-sessions": "^0.8.0",
     "cors": "^2.8.5",
+    "dotenv": "^9.0.2",
     "express": "^4.17.1",
     "helmet": "^4.6.0",
     "mongoose": "^5.12.9",
     "nodemon": "^2.0.9",
     "passport": "^0.4.1",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "ts-node": "^9.1.1",
+    "ts-node-dev": "^1.1.6",
+    "typescript": "^4.2.4"
   }
 }
