--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
 
         "noUnusedLocals": true,
         "noUnusedParameters": true,
-        "noImplicitReturns": true,
+        "noImplicitReturns": false,
         "noFallthroughCasesInSwitch": true,
 
         "moduleResolution": "node",
